# johnhib-tech

./: .gitignore  AGENTS.md  CATCHES.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TASKS.md  TOOLS.md  USER.md
.openclaw/: workspace-state.json
.vercel/: project.json
.vercel/output/: builds.json  config.json
.vercel/output/diagnostics/: cli_traces.json  trace  trace-build
.vercel/output/functions/: _global-error.prerender-config.json  _global-error.prerender-fallback.html  _global-error.rsc.prerender-config.json  _not-found.func  _not-found.prerender-config.json  _not-found.rsc.prerender-config.json  _not-found.rsc.prerender-fallback.rsc  favicon.ico.prerender-config.json  field-notes.prerender-config.json  field-notes.prerender-fallback.html  field-notes.rsc.prerender-config.json  field-notes.rsc.prerender-fallback.rsc  index.prerender-config.json  index.prerender-fallback.html  index.rsc.prerender-config.json  og.rsc.func  robots.txt.prerender-config.json  robots.txt.prerender-fallback.body  sitemap.xml.prerender-config.json  sitemap.xml.prerender-fallback.body
.vercel/output/functions/_global-error.segments/: __PAGE__.segment.rsc.prerender-config.json  __PAGE__.segment.rsc.prerender-fallback.rsc  _full.segment.rsc.prerender-config.json  (+6 more)
.vercel/output/static/: 404.html
Business/: Apple_AI_Ops_Lead_Resume_Reframe.md  Apple_CustomerJourneys_Resume_Reframe.md  Apple_Marcom_Resume_Reframe.md
Business/Career/: 01-google-outreach-strategy.md  02-linkedin-overhaul.md  03-us-company-research.md  04-daily-mantras.md  05-portfolio-site-ux.md  06-role-research-deep-analysis.md  07-current-open-roles.md  08-don-kim-matte-outreach.md  Apple_AI_Ops_Lead_Resume.md  John_Hibionada_AI_Career_Strategy.md  linkedin-summary.md  positioning-strategy.md  priority-map.csv  session-notes-2026-02-24.md
Business/JD/: ai-operations-lead-apple.md  forward-deployed-creative-flora.md
Business/References/: Reference c_o Mark Russell Project Manager, Live Nation.docx  Reference c_o Ryea Jones Program Manager, MarketSource.docx  WIP MKTG Employer Letter - Felipe Serrano.docx
Personal/: Mirror_by_ChatGPT.md  Mirror_by_Gemini.md  Mirror_by_Grok.md  jhgpt-handoff-dossier.md
docs/: learnings.md  openclaw-multi-model-setup.md  openclaw-utm-macos-security-mistakes.md
launchd/: dev.johnhib-com.plist  dev.johnhib-tech.plist
media/: inbound
memory/: 2026-02-23.md  2026-02-25.md  2026-02-26.md  2026-02-28.md  2026-03-04.md  2026-03-05.md  2026-03-11.md  2026-03-12.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  alert-state.json
memory/context/: freemind-context.md  jason-call-brief.md
memory/sessions/: 2026-03-17.md  2026-03-18.md
mission-control/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
mission-control/app/: globals.css  layout.tsx  page.tsx
mission-control/app/builder/: page.tsx
mission-control/app/documents/: page.tsx
mission-control/app/memory/: page.tsx
mission-control/app/org/: page.tsx
mission-control/app/projects/: page.tsx
mission-control/app/spend/: page.tsx
mission-control/app/system/: page.tsx
mission-control/app/tasks/: page.tsx
mission-control/app/tools/: page.tsx
mission-control/components/: Sidebar.tsx
projects/johnhib-com/: BRIEF.md
projects/johnhib-com/site/: package-lock.json
projects/johnhib-tech/: BRIEF.md
projects/johnhib-tech/site/: .gitignore  next.config.ts  package-lock.json  package.json
projects/sphere/: README.md  ROADMAP.md  stage-0-research.md  stage-1-brief.md  stage-1-env-setup.md  stage-1-retrospective.md
projects/sphere/poc-1-ofx-reader/: CMakeLists.txt  README.md  notes.md  test_decoder  test_decoder.cpp
projects/sphere/poc-1-ofx-reader/build-universal/: CMakeCache.txt  Makefile  SphereReader.ofx  cmake_install.cmake
projects/sphere/poc-1-ofx-reader/src/: SphereReader.cpp
projects/sphere/poc-2-metal-viewport/: README.md  equirect2rect  notes.md
projects/sphere/poc-3-paramset-keyframe/: CMakeLists.txt  README.md  notes.md
projects/sphere/poc-3-paramset-keyframe/build-universal/: CMakeCache.txt  Makefile  SphereKeyframe.ofx  cmake_install.cmake
projects/sphere/poc-3-paramset-keyframe/build-x86/: CMakeCache.txt  Makefile  cmake_install.cmake
projects/sphere/poc-3-paramset-keyframe/build-x86/SphereKeyframe.ofx.bundle/Contents/: Info.plist
projects/sphere/poc-3-paramset-keyframe/build-x86/SphereKeyframe.ofx.bundle/Contents/MacOS/: SphereKeyframe.ofx
projects/sphere/poc-3-paramset-keyframe/src/: SphereKeyframe.cpp
scripts/: com.openclaw.sync-attachments.plist  sync-attachments.sh
writer/: WRITER.md
writer/drafts/: 2026-03-16-how-to-secure-your-openclaw-setup.md  2026-03-16-persona-extraction-from-llms.md
(+161 files in other folders)
